[gd_scene load_steps=8 format=3 uid="uid://bqqcww601rcx5"]

[ext_resource type="Script" path="res://Scripts/Windows/WelcomeWindow.gd" id="1_hscvo"]
[ext_resource type="Texture2D" uid="uid://uyec6noccly6" path="res://Assets/Icons/new_file_icon.png" id="2_ripxl"]
[ext_resource type="Texture2D" uid="uid://t1i3wy037vsu" path="res://Assets/Icons/folder_icon.png" id="3_sct6c"]
[ext_resource type="PackedScene" uid="uid://dbq34pvukxcce" path="res://Objects/SubComponents/RecentFilesContainer.tscn" id="4_v0v62"]
[ext_resource type="PackedScene" uid="uid://dspmmme0jspdx" path="res://Objects/SubComponents/CloseButton.tscn" id="5_h3u5k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wb4lr"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.129412, 0.14902, 0.180392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_7mcdy"]
font_color = Color(0.423529, 0.423529, 0.423529, 1)

[node name="WelcomeWindow" type="Window"]
auto_translate_mode = 1
transparent_bg = true
initial_position = 2
size = Vector2i(600, 300)
wrap_controls = true
unresizable = true
borderless = true
always_on_top = true
transparent = true
script = ExtResource("1_hscvo")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wb4lr")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBox" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="NewFileBtn" type="Button" parent="PanelContainer/CenterContainer/VBox/HBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "New File"
icon = ExtResource("2_ripxl")

[node name="OpenFileBtn" type="Button" parent="PanelContainer/CenterContainer/VBox/HBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Open File..."
icon = ExtResource("3_sct6c")

[node name="RecentFilesContainer" parent="PanelContainer/CenterContainer/VBox" instance=ExtResource("4_v0v62")]
unique_name_in_owner = true
layout_mode = 2

[node name="VersionLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "v.X.X.X"
label_settings = SubResource("LabelSettings_7mcdy")

[node name="CloseButton" parent="PanelContainer" instance=ExtResource("5_h3u5k")]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[connection signal="pressed" from="PanelContainer/CenterContainer/VBox/HBox/NewFileBtn" to="." method="_on_new_file_btn_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBox/HBox/OpenFileBtn" to="." method="_on_open_file_btn_pressed"]
[connection signal="pressed" from="PanelContainer/CloseButton" to="." method="_on_close_btn_pressed"]
[connection signal="pressed" from="PanelContainer/CloseButton" to="." method="close"]
